gha: introduce kvstore action
Introduce a new GHA action responsible for generating the appropriate
TLS certificates and starting the given number of single replica etcd
clusters. It is intended to be leveraged by different workflows (e.g.,
clustermesh ones) to test Cilium when configured to connect to an
external kvstore.

In detail, it takes as input:
* the number of single replica etcd clusters to be created;
* the etcd image, which should be overridden only for testing purposes,
  as automatically bumped by renovate;
* the base name of each container (to which the index is appended);
* the Docker network the containers are attached to;

and returns as output:
* the path to the definition of the cilium-etcd-secrets secret,
  containing the TLS information to connect to the external kvstore;
* the parameters to configure Cilium to connect to the external
  kvstore; they are parametrized through the KVSTORE_ID variable
  to specify the ID of the kvstore to connect to;
* the clustermesh configuration to connect each cluster to all
  the remote ones (except for the cluster names, which should be
  specified externally).

Let's additionally assign the new action to the kvstore and
sig-clustermesh teams for review, as well as extend the renovate
configuration to automatically update the etcd image when appropriate.

Signed-off-by: Marco Iorio <marco.iorio@isovalent.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -232,6 +232,7 @@
 /.github/ @cilium/contributing
 /.github/renovate.json5 @cilium/github-sec @cilium/ci-structure
 /.github/actions/ @cilium/github-sec @cilium/ci-structure
+/.github/actions/kvstore/ @cilium/sig-clustermesh @cilium/kvstore @cilium/github-sec @cilium/ci-structure
 /.github/workflows/ @cilium/github-sec @cilium/ci-structure
 /.github/workflows/*clustermesh*.yaml @cilium/sig-clustermesh @cilium/github-sec @cilium/ci-structure
 /.github/workflows/*datapath*.yaml @cilium/sig-datapath @cilium/github-sec @cilium/ci-structure
