gha: extend clustermesh upgrade to also cover external kvstores
[ upstream commit 683a8e620f40bf35ec79738447bfff2787dea0fc ]

[ backporter's notes: in Cilium v1.14 and earlier, the clustermesh
  configuration secret is created only when the clustermesh-apiserver
  is enabled. For this reason, we need to enable it also when actually
  connecting to a remote kvstore cluster, although with zero replicas. ]

Let's extend the clustermesh upgrade/downgrade workflow with a new
matrix entry to also cover the external kvstores configuration. We
leverage the newly introduced kvstore action to setup the etcd
containers and retrieve the appropriate parameters.

Signed-off-by: Marco Iorio <marco.iorio@isovalent.com>
Signed-off-by: Marco Iorio <marco.iorio@isovalent.com>

--- a/.github/workflows/tests-clustermesh-upgrade.yaml
+++ b/.github/workflows/tests-clustermesh-upgrade.yaml
@@ -91,10 +91,12 @@ jobs:
           - name: '1'
             encryption: 'disabled'
             kube-proxy: 'iptables'
+            external-kvstore: false
 
           - name: '2'
             encryption: 'disabled'
             kube-proxy: 'none'
+            external-kvstore: false
 
           # Currently, ipsec requires to synchronously regenerate the host
           # endpoint to ensure ordering (#25735). Given that this is a blocking
@@ -104,14 +106,17 @@ jobs:
           # experience cross-cluster connection drops during upgrades/downgrades,
           # given that the timeout is too low to account for the initialization
           # of a new clustermesh-apiserver replica (while it is enough to prevent
-          # issues in case of agent restarts, if all remote clusters are ready).
-          # - name: '3'
-          #   encryption: 'ipsec'
-          #   kube-proxy: 'iptables'
+          # issues in case of agent restarts, if all remote clusters are ready,
+          # as well as when connecting to an external kvstore as in this case).
+          - name: '3'
+            encryption: 'ipsec'
+            kube-proxy: 'iptables'
+            external-kvstore: true
 
           - name: '4'
             encryption: 'wireguard'
             kube-proxy: 'iptables'
+            external-kvstore: false
 
     steps:
       - name: Checkout context ref (trusted)
@@ -151,7 +156,7 @@ jobs:
             --set=tunnelProtocol=vxlan \
             --set=ipv4.enabled=true \
             --set=ipv6.enabled=true \
-            --set=clustermesh.useAPIServer=true \
+            --set=clustermesh.useAPIServer=${{ !matrix.external-kvstore }} \
             --set=clustermesh.config.enabled=true \
             --set=extraConfig.clustermesh-ip-identities-sync-timeout=5m"
 
@@ -230,17 +235,25 @@ jobs:
           kubectl --context ${{ env.contextName1 }} create -n kube-system secret generic cilium-ipsec-keys --from-literal=keys="${SECRET}"
           kubectl --context ${{ env.contextName2 }} create -n kube-system secret generic cilium-ipsec-keys --from-literal=keys="${SECRET}"
 
+      - name: Start kvstore clusters
+        id: kvstore
+        if: matrix.external-kvstore
+        uses: ./.github/actions/kvstore
+        with:
+          clusters: 2
+
+      - name: Create the secret containing the kvstore credentials
+        if: matrix.external-kvstore
+        run: |
+          kubectl --context ${{ env.contextName1 }} create -n kube-system -f ${{ steps.kvstore.outputs.cilium_etcd_secrets_path }}
+          kubectl --context ${{ env.contextName2 }} create -n kube-system -f ${{ steps.kvstore.outputs.cilium_etcd_secrets_path }}
+
       - name: Set clustermesh connection parameters
         id: clustermesh-vars
         run: |
           # Let's retrieve in advance the parameters to mesh the two clusters, so
           # that we don't need to do that through the CLI in a second step, as it
           # would be reset during upgrade (as we are resetting the values).
-
-          IP1=$(kubectl --context ${{ env.contextName1 }} get nodes \
-            ${{ env.clusterName1 }}-worker -o wide --no-headers | awk '{ print $6 }')
-          IP2=$(kubectl --context ${{ env.contextName2 }} get nodes \
-            ${{ env.clusterName2 }}-worker -o wide --no-headers | awk '{ print $6 }')
 
           # Explicitly configure the NodePorts to make sure that they are different
           # in each cluster, to workaround #24692
@@ -251,20 +264,38 @@ jobs:
             --set cluster.name=${{ env.clusterName1 }} \
             --set cluster.id=1 \
             --set clustermesh.apiserver.service.nodePort=$PORT1 \
-            --set clustermesh.config.clusters[0].name=${{ env.clusterName2 }} \
-            --set clustermesh.config.clusters[0].ips={$IP2} \
-            --set clustermesh.config.clusters[0].port=$PORT2"
+          "
 
           CILIUM_INSTALL_CLUSTER2=" \
             --set cluster.name=${{ env.clusterName2 }} \
             --set cluster.id=255 \
             --set clustermesh.apiserver.service.nodePort=$PORT2 \
-            --set clustermesh.config.clusters[0].name=${{ env.clusterName1 }} \
-            --set clustermesh.config.clusters[0].ips={$IP1} \
-            --set clustermesh.config.clusters[0].port=$PORT1"
+          "
 
-          echo cilium_install_cluster1=$CILIUM_INSTALL_CLUSTER1 >> $GITHUB_OUTPUT
-          echo cilium_install_cluster2=$CILIUM_INSTALL_CLUSTER2 >> $GITHUB_OUTPUT
+          CILIUM_INSTALL_COMMON=" \
+            --set clustermesh.config.clusters[0].name=${{ env.clusterName1 }} \
+            --set clustermesh.config.clusters[1].name=${{ env.clusterName2 }} \
+          "
+
+          if [ "${{ matrix.external-kvstore }}" == "true" ]; then
+            CILIUM_INSTALL_COMMON="$CILIUM_INSTALL_COMMON \
+              ${{ steps.kvstore.outputs.cilium_install_clustermesh }}"
+          else
+            IP1=$(kubectl --context ${{ env.contextName1 }} get nodes \
+              ${{ env.clusterName1 }}-worker -o wide --no-headers | awk '{ print $6 }')
+            IP2=$(kubectl --context ${{ env.contextName2 }} get nodes \
+              ${{ env.clusterName2 }}-worker -o wide --no-headers | awk '{ print $6 }')
+
+            CILIUM_INSTALL_COMMON="$CILIUM_INSTALL_COMMON \
+              --set clustermesh.config.clusters[0].ips={$IP1} \
+              --set clustermesh.config.clusters[0].port=$PORT1 \
+              --set clustermesh.config.clusters[1].ips={$IP2} \
+              --set clustermesh.config.clusters[1].port=$PORT2 \
+            "
+          fi
+
+          echo cilium_install_cluster1="$CILIUM_INSTALL_CLUSTER1 $CILIUM_INSTALL_COMMON" >> $GITHUB_OUTPUT
+          echo cilium_install_cluster2="$CILIUM_INSTALL_CLUSTER2 $CILIUM_INSTALL_COMMON" >> $GITHUB_OUTPUT
 
       # Warning: since this is a privileged workflow, subsequent workflow job
       # steps must take care not to execute untrusted code.
@@ -319,22 +350,36 @@ jobs:
 
       - name: Install Cilium in cluster1
         id: install-cilium-cluster1
+        env:
+          KVSTORE_ID: 1
         run: |
+          # We enable the clustermesh-apiserver (although with zero replicas)
+          # also when actually connecting to an external kvstore. This is a
+          # workaround to enable creating the clustermesh configuration secret,
+          # that is otherwise skipped in Cilium v1.14 (and earlier).
+
           cilium --context ${{ env.contextName1 }} install \
             ${{ steps.downgrade-vars.outputs.cilium_image_settings }} \
             ${{ steps.vars.outputs.cilium_install_defaults }} \
-            ${{ steps.clustermesh-vars.outputs.cilium_install_cluster1 }}
+            ${{ steps.kvstore.outputs.cilium_install_kvstore }} \
+            ${{ steps.clustermesh-vars.outputs.cilium_install_cluster1 }} \
+            --set=clustermesh.useAPIServer=true \
+            --set=clustermesh.apiserver.replicas=${{ matrix.external-kvstore && '0' || '1' }} \
 
       - name: Copy the Cilium CA secret to cluster2, as they must match
+        if: ${{ !matrix.external-kvstore }}
         run: |
           kubectl --context ${{ env.contextName1 }} get secret -n kube-system cilium-ca -o yaml |
             kubectl --context ${{ env.contextName2 }} create -f -
 
       - name: Install Cilium in cluster2
+        env:
+          KVSTORE_ID: 2
         run: |
           cilium --context ${{ env.contextName2 }} install \
             ${{ steps.newest-vars.outputs.cilium_install_defaults }} \
             ${{ steps.vars.outputs.cilium_install_defaults }} \
+            ${{ steps.kvstore.outputs.cilium_install_kvstore }} \
             ${{ steps.clustermesh-vars.outputs.cilium_install_cluster2 }}
 
       - name: Wait for cluster mesh status to be ready
@@ -366,14 +411,18 @@ jobs:
 
 
       - name: Upgrade Cilium in cluster1 and enable kvstoremesh
+        env:
+          KVSTORE_ID: 1
         run: |
           cilium --context ${{ env.contextName1 }} upgrade --reset-values \
             ${{ steps.newest-vars.outputs.cilium_install_defaults }} \
             ${{ steps.vars.outputs.cilium_install_defaults }} \
+            ${{ steps.kvstore.outputs.cilium_install_kvstore }} \
             ${{ steps.clustermesh-vars.outputs.cilium_install_cluster1 }} \
             --set clustermesh.apiserver.kvstoremesh.enabled=true
 
       - name: Rollout Cilium agents in cluster2
+        if: ${{ !matrix.external-kvstore }}
         run: |
           # This makes sure that the remote agents reconnect to the new instance of the
           # clustermesh-apiserver, without waiting for the watchdog mechanism to kick in.
@@ -415,6 +464,7 @@ jobs:
       # Perform an additional "stress" test, scaling the clustermesh-apiservers in both clusters
       # to zero replicas, and restarting all agents. Existing connections should not be disrupted.
       - name: Scale the clustermesh-apiserver replicas to 0
+        if: ${{ !matrix.external-kvstore }}
         run: |
           kubectl --context ${{ env.contextName1 }} scale -n kube-system deploy/clustermesh-apiserver --replicas 0
           kubectl --context ${{ env.contextName2 }} scale -n kube-system deploy/clustermesh-apiserver --replicas 0
@@ -429,6 +479,7 @@ jobs:
           kubectl --context ${{ env.contextName2 }} rollout status -n kube-system ds/cilium --timeout=5m
 
       - name: Scale the clustermesh-apiserver replicas back to 1
+        if: ${{ !matrix.external-kvstore }}
         run: |
           kubectl --context ${{ env.contextName1 }} scale -n kube-system deploy/clustermesh-apiserver --replicas 1
           kubectl --context ${{ env.contextName2 }} scale -n kube-system deploy/clustermesh-apiserver --replicas 1
@@ -471,13 +522,24 @@ jobs:
 
 
       - name: Downgrade Cilium in cluster1 and disable kvstoremesh
+        env:
+          KVSTORE_ID: 1
         run: |
+          # We enable the clustermesh-apiserver (although with zero replicas)
+          # also when actually connecting to an external kvstore. This is a
+          # workaround to enable creating the clustermesh configuration secret,
+          # that is otherwise skipped in Cilium v1.14 (and earlier).
+
           cilium --context ${{ env.contextName1 }} upgrade --reset-values \
             ${{ steps.downgrade-vars.outputs.cilium_image_settings }} \
             ${{ steps.vars.outputs.cilium_install_defaults }} \
-            ${{ steps.clustermesh-vars.outputs.cilium_install_cluster1 }}
+            ${{ steps.kvstore.outputs.cilium_install_kvstore }} \
+            ${{ steps.clustermesh-vars.outputs.cilium_install_cluster1 }} \
+            --set=clustermesh.useAPIServer=true \
+            --set=clustermesh.apiserver.replicas=${{ matrix.external-kvstore && '0' || '1' }} \
 
       - name: Rollout Cilium agents in cluster2
+        if: ${{ !matrix.external-kvstore }}
         run: |
           # This makes sure that the remote agents reconnect to the new instance of the
           # clustermesh-apiserver, without waiting for the watchdog mechanism to kick in.
@@ -523,6 +585,14 @@ jobs:
           kubectl config use-context ${{ env.contextName2 }}
           kubectl get pods --all-namespaces -o wide
           cilium sysdump --output-filename cilium-sysdump-context2-final-${{ join(matrix.*, '-') }}
+
+          if [ "${{ matrix.external-kvstore }}" == "true" ]; then
+            for i in {1..2}; do
+              echo
+              echo "# Retrieving logs from kvstore$i docker container"
+              docker logs kvstore$i
+            done
+          fi
         shell: bash {0} # Disable default fail-fast behaviour so that all commands run independently
 
       - name: Upload artifacts
