nodeipam: add a Service LoadBalancer node ipam
Add a new Node IPAM to Cilium controlled by the loadBalancer class
`io.cilium/node`. This works similarly to k3s ServiceLB
and allow users to advertise node IPs. It is especially useful in
context where users don't have control over the networks and can't
advertise IPs using L2 or BGP.

It simply works by getting the addresses of the nodes of the selected pods and
advertising those in the Service status. Node IPAM will also respect
`.spec.ipFamilies` and use `ExternalIP` if it can find any or `InternalIP`
otherwise.

Signed-off-by: Arthur Outhenin-Chalandre <arthur@cri.epita.fr>

--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -1000,6 +1000,10 @@ data:
   limit-ipam-api-qps: {{ .Values.ipam.operator.externalAPILimitQPS | quote }}
 {{- end }}
 
+{{- if .Values.nodeIPAM.enabled }}
+  enable-node-ipam: "true"
+{{- end }}
+
 {{- if .Values.apiRateLimit }}
   api-rate-limit: {{ .Values.apiRateLimit | quote }}
 {{- end }}
