[WIP] Enable and port-forward Hubble for conformance e2e.
Signed-off-by: Tom Hadlaw <tom.hadlaw@isovalent.com>

--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -334,6 +334,17 @@ jobs:
 
           mkdir -p cilium-junits
 
+      - name: Enable Relay
+        run: |
+          ./cilium-cli hubble enable
+          ./cilium-cli status --wait
+
+      - name: Port forward Relay
+        run: |
+          ./cilium-cli hubble port-forward&
+          sleep 10s
+          [[ $(pgrep -f "cilium.*hubble.*port-forward|kubectl.*port-forward.*hubble-relay" | wc -l) == 2 ]]
+
       - name: Run tests
         shell: bash
         run: |
