--- a/.github/actions/cilium-config/action.yml
+++ b/.github/actions/cilium-config/action.yml
@@ -84,7 +84,7 @@ runs:
             --helm-set=hubble.relay.image.repository=quay.io/${{ env.QUAY_ORGANIZATION_DEV }}/hubble-relay-ci \
             --helm-set=hubble.relay.image.tag=${{ inputs.image-tag }} \
             --helm-set=hubble.relay.image.useDigest=false \
-            --helm-set=hubble.relay.enabled=true"
+            --helm-set=hubble.relay.enabled=false"
           fi
 
           TUNNEL="--helm-set-string=tunnelProtocol=${{ inputs.tunnel }}"
