--- a/bpf/Makefile.bpf
+++ b/bpf/Makefile.bpf
@@ -15,7 +15,7 @@ CLANG_FLAGS += -Wimplicit-int-conversion -Wenum-conversion
 CLANG_FLAGS += -Wimplicit-fallthrough
 LLC_FLAGS := -march=bpf
 # Mimics the mcpu values set by cilium-agent. See GetBPFCPU().
-ifeq ("$(KERNEL)","netnext")
+ifneq (,$(filter $(KERNEL),510 61 netnext))
 LLC_FLAGS += -mcpu=v3
 else
 LLC_FLAGS += -mcpu=v2
