--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,4 +1,8 @@
-all: run
+all: build run
+
+
+build:
+	go build .
 
 run:
-	go run . --k8s-kubeconfig-path ~/.kube/config
+	sudo ./demo --k8s-kubeconfig-path ~/.kube/config
