--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -9,7 +9,8 @@ on:
       renovate_log_level_debug:
         type: boolean
         default: true
-
+  pull_request:
+    
 jobs:
   renovate:
     runs-on: ubuntu-latest
