Egress Gateway Policies CRD validations
This commit adds validation to the `ciliumegressgatewaypolicies` CRD to ensure `egressIP` and `interface` are not configured at the same time.

Signed-off-by: soggiest <nicholas@isovalent.com>

--- a/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumegressgatewaypolicies.yaml
+++ b/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumegressgatewaypolicies.yaml
@@ -134,6 +134,9 @@ spec:
                 required:
                 - nodeSelector
                 type: object
+                x-kubernetes-validations:
+                - message: Egress Gateway cannot contain both egressIP and interface
+                  rule: '!((has(self.egressIP)) && (has(self.interface)))'
               excludedCIDRs:
                 description: ExcludedCIDRs is a list of destination CIDRs that will
                   be excluded from the egress gateway redirection and SNAT logic.
