Helm: additional info for mtu value
This commit adds additional information
on which interfaces the mtu value configures.

Signed-off-by: darox <maderdario@gmail.com>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -2339,7 +2339,10 @@ tunnelPort: 0
 #  - drop
 serviceNoBackendResponse: reject
 
-# -- Configure the underlying network MTU to overwrite auto-detected MTU.
+# -- Configure the underlying network MTU to overwrite auto-detected MTU. 
+# This value doesn't change the host network interface MTU i.e. eth0 or ens0.
+# It changes the MTU for cilium_net@cilium_host, cilium_host@cilium_net,
+# cilium_vxlan and lxc_health interfaces.
 MTU: 0
 
 # -- Disable the usage of CiliumEndpoint CRD.
