Add network performance CI test.
[ upstream commit 027bd96af890c865ce0c99788e991f85dfe65389 ]

For now, we cover following matrix of features:
- tunneling/direct-routing
- no encryption/ipsec
- hubble enabled/disabled

All results are exported in a format compatible with Perfdash, where we
can visualize results and see regressions/improvements for specific
configurations.

Signed-off-by: Marcel Zieba <marcel.zieba@isovalent.com>
Signed-off-by: Jussi Maki <jussi@isovalent.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -221,6 +221,7 @@
 # after the less specific paths, otherwise the ownership for the specific paths
 # is not properly picked up in Github.
 * @cilium/tophat
+/.github/workflows/*perf*.yaml @cilium/sig-scalability @cilium/github-sec @cilium/ci-structure
 /.github/workflows/ @cilium/github-sec @cilium/ci-structure
 /api/ @cilium/api
 /api/v1/Makefile @cilium/sig-hubble-api
