cleanups Signed-off-by: Jussi Maki <jussi@isovalent.com>

--- a/demo/controlplane/testdata/kube-dns/expected.yaml
+++ b/demo/controlplane/testdata/kube-dns/expected.yaml
@@ -1,10 +1,11 @@
 frontends:
-    - id: 1
-      name: kube-system/kube-dns
-      addr: 10.96.0.10
-      protocol: UDP
-      port: 53
-      type: ClusterIP
+    - frontendmeta:
+        name: kube-system/kube-dns
+        addr: 10.96.0.10
+        protocol: UDP
+        port: 53
+        type: ClusterIP
+      id: 1
       backends:
         - 1
         - 2
