ci-ipsec-upgrade: Update name of test to skip, to match cilium-cli's
Due to flakiness, we skip a test in workflow tests-ipsec-upgrade.yaml by
using the relevant cilium-cli flag. However, the name of this test in
cilium-cli has changed over time [0]. We recently pulled that change
when bumping the cilium-cli from v0.15.14 to v0.15.19, but we haven't
updated the name of the test in the workflow. Let's do it now.

[0] https://github.com/cilium/cilium-cli/commit/4880c91a726ddbad3363cc48f4bb8c11ed1150bd

Fixes: 2c2aa5079f17 ("chore(deps): update dependency cilium/cilium-cli to v0.15.19")
Signed-off-by: Quentin Monnet <quentin@isovalent.com>

--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -349,8 +349,9 @@ jobs:
         uses: cilium/cilium/.github/actions/conn-disrupt-test@v1.13
         with:
           job-name: ipsec-downgrade-${{ matrix.name }}
-          # Disable no-missed-tail-calls due to https://github.com/cilium/cilium/issues/26739
-          extra-connectivity-test-flags: --test '!no-missed-tail-calls'
+          # Disable no-unexpected-packet-drops (formerly no-missed-tail-calls)
+          # due to https://github.com/cilium/cilium/issues/26739
+          extra-connectivity-test-flags: --test '!no-unexpected-packet-drops'
           operation-cmd: |
             cd /host/
 
