ci-e2e: Bump cilium-cli, skip node-to-node-encryption with tunneling
In a later backport commit, we will rework some CI workflows, including
conformance-e2e.yaml. One consequence is that we will unintentionally
"fix" an issue introduced in a recent backport for this workflow, but
this will cause cilium-cli to complain and the workflow to fail. This is
a preparatory commit containing three adjustments to fix the issue.

The issue is that, since commit ee6c73a07cb4 ("ci-e2e: Do not check for
missed tail calls with host-fw"), we sometimes pass the flag
--expected-drop-reasons with the variable ${EXTRA[@]} to cilium-cli. But
this does not work as expected, because:

- The flag was only added in cilium-cli v0.15.18 (the workflow uses
  v0.15.14). This should cause cilium-cli to complain.

- This complaint was masked by another issue: when passing ${EXTRA[@]}
  as a cmd to Action cilium/little-vm-helper, the dollar symbol should
  be escaped to avoid expansing the variable before it was initialised
  and eventually passing an empty string instead of the expected
  arguments. So currently, we never pass the flag (and never cause
  cilium-cli to complain).

So in this commit, we make sure that \${EXTRA[@]} is passed properly,
and we bump cilium-cli (to v0.15.19) to ensure the flag
--expected-drop-reasons is available.

But the cilium-cli version bump has yet another consequence: in the
connectivity tests, v0.15.14 used to skip the node-to-node-encryption
test if node encryption was disabled. This is no longer the case with
v0.15.19 [0]. So cilium-cli attempts to run node-to-node-encryption, but
fails with tunneling is enabled (the test is broken). This is the third
adjustment brought by this commit: we address this by skipping
node-to-node-encryption manually in the workflow when tunneling is
enabled.

[0] https://github.com/cilium/cilium-cli/commit/32e12a8e5ab25c54ffe5366825e420a30ea4c3fe

Fixes: ee6c73a07cb4 ("ci-e2e: Do not check for missed tail calls with host-fw")
Sign

--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -52,7 +52,7 @@ concurrency:
 
 env:
   # renovate: datasource=github-releases depName=cilium/cilium-cli
-  cilium_cli_version: v0.15.3
+  cilium_cli_version: v0.15.19
   cilium_cli_ci_version:
   check_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
@@ -310,8 +310,17 @@ jobs:
               EXTRA+=("--expected-drop-reasons=+Missed tail call")
             fi
 
+            if [ "${{ matrix.tunnel }}" != "disabled" ]; then
+              # node-to-node-encryption test with tunneling is broken on this
+              # branch. It was skipped before we bumped cilium_cli_version from
+              # v0.15.3 to v0.15.19, because we don't have encryption enabled,
+              # but cilium-cli changed it in
+              # https://github.com/cilium/cilium-cli/commit/32e12a8e5ab25c54ffe5366825e420a30ea4c3fe
+              EXTRA+=('--test=!node-to-node-encryption')
+            fi
+
             ./cilium-cli connectivity test --include-unsafe-tests --collect-sysdump-on-failure \
-              "${EXTRA[@]}" \
+              "\${EXTRA[@]}" \
               --sysdump-hubble-flows-count=1000000 --sysdump-hubble-flows-timeout=5m \
               --sysdump-output-filename "cilium-sysdump-${{ matrix.name }}-<ts>" \
               --junit-file "cilium-junits/${{ env.job_name }} (${{ join(matrix.*, ', ') }}).xml" \
