--- a/.github/workflows/conformance-externalworkloads.yaml
+++ b/.github/workflows/conformance-externalworkloads.yaml
@@ -143,7 +143,7 @@ jobs:
 
           CILIUM_INSTALL_DEFAULTS="--cluster-name=${{ env.clusterName }} \
             --datapath-mode=tunnel \
-            --chart-directory=install/kubernetes/cilium \
+            --chart-directory=./untrusted/install/kubernetes/cilium \
             --helm-set=image.repository=quay.io/${{ env.QUAY_ORGANIZATION_DEV }}/cilium-ci \
             --helm-set=image.useDigest=false \
             --helm-set=image.tag=${SHA} \
@@ -182,6 +182,9 @@ jobs:
         with:
           ref: ${{ steps.vars.outputs.sha }}
           persist-credentials: false
+          path: untrusted
+          sparse-checkout: |
+            install/kubernetes/cilium
 
       - name: Install Cilium CLI
         uses: cilium/cilium-cli@5362f383942260c0aed4f3876e09c3452435577a # v0.14.8
